--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -132,6 +132,8 @@
     <ClInclude Include="Shader_3dapi_03_27.h" />
     <ClInclude Include="Shader_3dapi_03_28.h" />
     <ClInclude Include="Shader_3dapi_03_29.h" />
+    <ClInclude Include="Shader_3dapi_03_30.h" />
+    <ClInclude Include="Shader_3dapi_03_31.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -186,6 +188,8 @@
     <ClCompile Include="Shader_3dapi_03_27.cpp" />
     <ClCompile Include="Shader_3dapi_03_28.cpp" />
     <ClCompile Include="Shader_3dapi_03_29.cpp" />
+    <ClCompile Include="Shader_3dapi_03_30.cpp" />
+    <ClCompile Include="Shader_3dapi_03_31.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
