--- a/3DAPIShader/3DAPIShader.vcxproj.filters
+++ b/3DAPIShader/3DAPIShader.vcxproj.filters
@@ -217,6 +217,9 @@
       <Filter>헤더 파일\Chapter03</Filter>
     </ClInclude>
     <ClInclude Include="Shader_3dapi_03_39.h">
+      <Filter>헤더 파일\Chapter03</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader_3dapi_03_40.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -402,6 +405,9 @@
       <Filter>소스 파일\Chapter03</Filter>
     </ClCompile>
     <ClCompile Include="Shader_3dapi_03_39.cpp">
+      <Filter>소스 파일\Chapter03</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_03_40.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
