--- a/3DAPIShader/3DAPIShader.vcxproj.filters
+++ b/3DAPIShader/3DAPIShader.vcxproj.filters
@@ -220,7 +220,10 @@
       <Filter>헤더 파일\Chapter03</Filter>
     </ClInclude>
     <ClInclude Include="Shader_3dapi_03_40.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Chapter03</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader_3dapi_03_41.h">
+      <Filter>헤더 파일\Chapter03</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -408,7 +411,10 @@
       <Filter>소스 파일\Chapter03</Filter>
     </ClCompile>
     <ClCompile Include="Shader_3dapi_03_40.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Chapter03</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_03_41.cpp">
+      <Filter>소스 파일\Chapter03</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
