--- a/3DAPIShader/3DAPIShader.vcxproj.filters
+++ b/3DAPIShader/3DAPIShader.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="Shader_3dapi_03_41.h">
       <Filter>헤더 파일\Chapter03</Filter>
     </ClInclude>
+    <ClInclude Include="Shader_3dapi_03_42.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -415,6 +418,9 @@
     </ClCompile>
     <ClCompile Include="Shader_3dapi_03_41.cpp">
       <Filter>소스 파일\Chapter03</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_03_42.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
