--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="Shader_3dapi_03_39.h" />
     <ClInclude Include="Shader_3dapi_03_40.h" />
     <ClInclude Include="Shader_3dapi_03_41.h" />
+    <ClInclude Include="Shader_3dapi_03_42.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -210,6 +211,7 @@
     <ClCompile Include="Shader_3dapi_03_39.cpp" />
     <ClCompile Include="Shader_3dapi_03_40.cpp" />
     <ClCompile Include="Shader_3dapi_03_41.cpp" />
+    <ClCompile Include="Shader_3dapi_03_42.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
