--- a/3DAPIShader/3DAPIShader.vcxproj.filters
+++ b/3DAPIShader/3DAPIShader.vcxproj.filters
@@ -249,6 +249,12 @@
     <ClInclude Include="Shader_3dapi_01_05.h">
       <Filter>헤더 파일\Chapter01</Filter>
     </ClInclude>
+    <ClInclude Include="Shader_3dapi_01_07.h">
+      <Filter>헤더 파일\Chapter01</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader_3dapi_01_06.h">
+      <Filter>헤더 파일\Chapter01</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -456,6 +462,12 @@
       <Filter>소스 파일\Chapter01</Filter>
     </ClCompile>
     <ClCompile Include="Shader_3dapi_01_05.cpp">
+      <Filter>소스 파일\Chapter01</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_01_07.cpp">
+      <Filter>소스 파일\Chapter01</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_01_06.cpp">
       <Filter>소스 파일\Chapter01</Filter>
     </ClCompile>
   </ItemGroup>
