--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -100,6 +100,8 @@
     <ClInclude Include="Shader_3dapi_01_03.h" />
     <ClInclude Include="Shader_3dapi_01_04.h" />
     <ClInclude Include="Shader_3dapi_01_05.h" />
+    <ClInclude Include="Shader_3dapi_01_06.h" />
+    <ClInclude Include="Shader_3dapi_01_07.h" />
     <ClInclude Include="Shader_3dapi_02_18.h" />
     <ClInclude Include="Shader_3dapi_02_19.h" />
     <ClInclude Include="Shader_3dapi_02_20.h" />
@@ -172,6 +174,8 @@
     <ClCompile Include="Shader_3dapi_01_03.cpp" />
     <ClCompile Include="Shader_3dapi_01_04.cpp" />
     <ClCompile Include="Shader_3dapi_01_05.cpp" />
+    <ClCompile Include="Shader_3dapi_01_06.cpp" />
+    <ClCompile Include="Shader_3dapi_01_07.cpp" />
     <ClCompile Include="Shader_3dapi_02_18.cpp" />
     <ClCompile Include="Shader_3dapi_02_19.cpp" />
     <ClCompile Include="Shader_3dapi_02_20.cpp" />
