--- a/3DAPIShader/3DAPIShader.vcxproj
+++ b/3DAPIShader/3DAPIShader.vcxproj
@@ -106,6 +106,8 @@
     <ClInclude Include="Shader_3dapi_01_09.h" />
     <ClInclude Include="Shader_3dapi_01_10.h" />
     <ClInclude Include="Shader_3dapi_01_11.h" />
+    <ClInclude Include="Shader_3dapi_01_12.h" />
+    <ClInclude Include="Shader_3dapi_01_13.h" />
     <ClInclude Include="Shader_3dapi_02_18.h" />
     <ClInclude Include="Shader_3dapi_02_19.h" />
     <ClInclude Include="Shader_3dapi_02_20.h" />
@@ -184,6 +186,8 @@
     <ClCompile Include="Shader_3dapi_01_09.cpp" />
     <ClCompile Include="Shader_3dapi_01_10.cpp" />
     <ClCompile Include="Shader_3dapi_01_11.cpp" />
+    <ClCompile Include="Shader_3dapi_01_12.cpp" />
+    <ClCompile Include="Shader_3dapi_01_13.cpp" />
     <ClCompile Include="Shader_3dapi_02_18.cpp" />
     <ClCompile Include="Shader_3dapi_02_19.cpp" />
     <ClCompile Include="Shader_3dapi_02_20.cpp" />
