--- a/3DAPIShader/3DAPIShader.vcxproj.filters
+++ b/3DAPIShader/3DAPIShader.vcxproj.filters
@@ -267,6 +267,12 @@
     <ClInclude Include="Shader_3dapi_01_11.h">
       <Filter>헤더 파일\Chapter01</Filter>
     </ClInclude>
+    <ClInclude Include="Shader_3dapi_01_12.h">
+      <Filter>헤더 파일\Chapter01</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader_3dapi_01_13.h">
+      <Filter>헤더 파일\Chapter01</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -492,6 +498,12 @@
       <Filter>소스 파일\Chapter01</Filter>
     </ClCompile>
     <ClCompile Include="Shader_3dapi_01_11.cpp">
+      <Filter>소스 파일\Chapter01</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_01_12.cpp">
+      <Filter>소스 파일\Chapter01</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader_3dapi_01_13.cpp">
       <Filter>소스 파일\Chapter01</Filter>
     </ClCompile>
   </ItemGroup>
